css/style.css
/* ... */
.orlandotitle {
    background: url(../work/travel/orlando1.jpg) center / cover no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
}
.sendaititle {
    background: url(../work/travel/sendai1.jpg) center / cover no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
}
.sydneytitle {
    background: url(../work/travel/sydney1.jpg) center / cover no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
}
.venicetitle {
    background: url(../work/travel/venice1.jpg) center / cover no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
}
.city {
    font-size: 1em;
}
.photo {
    display: inline;
    margin: 1.5em;
    margin-right: 0;
    
    height: 37.5vw;
    border-radius: 0.25vw;
    
    transition: 0.28s;
}
.photo:hover {
    transform: scale(1.01);
    transition: 0.28s;
}
.last {
    margin-right: 1.5em;
}
.scroll {
    overflow: scroll;
    white-space: nowrap;
    margin-bottom: 3em;
}
::-webkit-scrollbar {
    display: none;
}


/* Footer */
footer {
    color: #B2B2B2;
    margin-top: 1em;
    transition: 0.28s;
}
footer h4 {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    transition: 0.28s;
}
footer a:hover {
    color: #000000;
    transition: 0.28s;
}
i {
    margin: 0.75vw;
}
.links {
    float: right;
}


/* Scroll To Top */
#scrollTop {
    cursor: pointer;
    outline: none !important;
    
    background: url(../top.png) center / contain no-repeat;
    opacity: 0.3;

    position: fixed;
    bottom: 67.5px; 
    right: 8.5vw; 
    width: 2em;
    height: 0.8em;
    z-index: 99;
    
    transition: 0.28s;
}
#scrollTop:hover {
    opacity: 1;
    transition: 0.28s;
}
#scrollTop.no-display {
    opacity: 0;
}


/* Responsive Modifications */
@media screen and (max-width: 1275px) {
    .project {
        display: inline-block;
        position: relative;
        height: 35vw;
        width: 35vw;
        border-radius: 0.75vw;
        padding: 2vw;
        overflow: hidden;
        margin: 2vw;

        color: #FFFFFF;
        text-align: center;
    }
    .ideocolab {
        padding-left: 0;
    }
    #exploration {
        margin-top: 1.5em;
    }
    footer {
        margin-top: 3em;
    }
    .links {
        display: inline-block;
        float: left;
    }
}

@media screen and (max-width: 450px) {
    header {
        margin-top: -10vw;
    }
    .zklogo {
        height: 10vw;
    }
    #name {
        font-size: 4.5vw;
        display: none;
    }
    h1 {
        font-size: 1.75em;
        margin-top: -7vw;
    }
    h3 {
        font-size: 0.75em;
    }
    h4 {
        font-size: 1em;
    }
    .option {
        font-size: 4vw;
        margin: 2.5vw;
    }
    .title {
        font-size: 1.75em;
    }
    .projectimg {
        height: auto;
    }
    .project {
        display: inline-block;
        position: relative;
        height: 70vw;
        width: 70vw;
        border-radius: 2vw;
        padding: 4vw;
        overflow: hidden;
        margin: 2vw;

        color: #FFFFFF;
        text-align: center;
    }
    .project h2 {
        font-size: 10vw;
        margin-top: 42.5vw;
        margin-bottom: 0em;
    }
    .caption {
        font-size: 3vw;
    }
    .ideocolab {
        padding-left: 0;
    }
    .nalp img {
        margin-top: 10vw;
    }
    .earbud img {
        margin-top: 3vw;
    }
    .campmosaic img {
        margin-top: 16vw;
    }
    .chirp img {
        margin-top: 6vw;
    }
    .designs img {
        margin-top: 4vw;
    }
    .travel h2 {
        font-size: 15vw;
        margin-top: 20vw;
    }
    #exploration {
        margin-top: 1.5em;
    }
    .city {
        font-size: 0.75em;
    }
    .photo {
        height: 45vw;
        margin: 1em;
        margin-bottom: 5em;
        margin-left: 0;
    }
    footer {
        margin-top: 3em;
        padding-bottom: 2em;
    }
    i {
        transform: scale(1.5);
        margin-right: 5vw;
        margin-top: 5vw;
    }
    .links {
        display: inline-block;
        float: left;
    }
    #scrollTop {
        bottom: 50.5px; 
    }
}

/* Animations */
@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(0.05%);   
  }
  100% {
    opacity: 1;
    transform: translateY(0); 
  }
}

